fix container misalignment

--- a/src/auto-component.css
+++ b/src/auto-component.css
@@ -56,7 +56,7 @@
 }
 #auto-component-tabs {
   position: fixed;
-  bottom: 68px;
+  bottom: 70px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -70,7 +70,7 @@
 .tab {
   width: 30%;
   margin: 0 10%;
-  padding: 4px 0;
+  padding: 6px 0;
   background: #c6c7d3 !important;
   color: #fff !important;
   border-radius: 0 0 5px 5px;
@@ -83,24 +83,24 @@
 .auto-component-selected {
   background: #444 !important;
   color: #aaa !important;
-  font-size: 1.2rem;
+  font-weight: bold;
 }
 #auto-component-code-container {
   position: fixed;
   bottom: 180px;
   left: 50%;
   transform: translateX(-50%);
+  overflow: hidden;
   width: 80%;
   max-width: 900px;
-  max-height: 300px;
-  height: 300px;
+  max-height: 400px;
 }
 
 #auto-component-code {
-  width: 100%;
+  margin: 0;
+  padding: 0;
   max-width: 900px;
   max-height: 300px;
-  height: 300px;
   text-align: left;
   background: #cdd1d9;
   color: #111;
@@ -115,8 +115,8 @@
 }
 .auto-component-copy {
   position: absolute;
-  top: 2px;
-  right: 2px;
+  top: 0;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
